# boat-detector-BOW

./: CMakeLists.txt  README.md  README.txt  vocabulary.yml
Detector_Utils/: Detector_Utils.cpp  Detector_Utils.h
Laura_Bragagnolo_dataset_prep/: CMakeLists.txt  README.txt
Laura_Bragagnolo_dataset_prep/src/: Laura_Bragagnolo_dataset_prep.cpp
Laura_Bragagnolo_training/: CMakeLists.txt  README.txt
Laura_Bragagnolo_training/src/: Laura_Bragagnolo_training.cpp
src/: Laura_Bragagnolo_boat_detector.cpp
